EDSC-968: Avoid wrapping bounding rectangle labels and fix collection details markup and spacing

--- a/app/assets/stylesheets/modules/collection_details.css.scss
+++ b/app/assets/stylesheets/modules/collection_details.css.scss
@@ -68,6 +68,7 @@
   background-color: #171717;
   font-size: 0.6em;
   text-align: center;
+  margin-bottom: .5em;
 }
 
 .arrow-tag-group {
